--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/tum.png">
+  <link rel="icon" type="image/png" href="Images/tum.png">
 </head>
 
 <body>
-  <table style="width:120%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <table style="width:110%;max-width:820px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
-        <table style="width:115%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:110%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
-            <td style="padding:2.5%;width:55%;vertical-align:middle">
-              <p style="font: 30px/1 Tahoma,Helvetica,Arial,\5b8b\4f53,sans-serif;text-align:center">Yujin Chen 陈雨劲</p>
+            <td style="padding:2.5%;width:50%;vertical-align:middle">
+              <p style="font: 30px/1 Tahoma,Helvetica,Arial,'KaiTi',sans-serif;text-align:center">Yujin Chen 陈雨劲</p>
               <p style="text-align:justify">
         I'm a Ph.D. student at the Technical University of Munich, working with <a href="http://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Prof. Matthias Nießner</a> in the <a href="http://www.niessnerlab.org/index.html" target="_blank">Visual Computing Lab</a>. 
         Before that, I received my B.Eng and M.Sc from Wuhan University.
@@ -45,8 +45,8 @@
         <a href="https://twitter.com/YujinChen_cv" target="_blank"> Twitter </a>
         </p>
             </td>
-            <td style="padding:2.5%;width:20%;max-width:20%">
-              <a href="Images/yujin_eccv.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="Images/yujin_eccv.JPG" class="hoverZoomLink"></a>
+            <td style="padding:3%;width:20%;max-width:20%">
+              <a href="Images/yujin_2024.JPG"><img style="width:80%;max-width:80%" alt="profile photo" src="Images/yujin_2024.JPG" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -71,16 +71,16 @@
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
                     <a>
-                      <papertitle>Mesh2NeRF: Direct Mesh Supervision for Neural Radiance Field Representation and Generation.</papertitle>
+                      <papertitle>Mesh2NeRF: Direct Mesh Supervision for Neural Radiance Field Representation and Generation</papertitle>
                     </a>
                     <br>
               <strong>Yujin Chen</strong>,
               <a href="https://yinyunie.github.io/" target="_blank">Yinyu Nie</a>,
               <a href="https://scholar.google.de/citations?user=QGlp5ywAAAAJ&hl=en" target="_blank">Benjamin Ummenhofer</a>,
-              <a href="" target="_blank">Reiner Birkl</a>,
-              <a href="" target="_blank">Michael Paulitsch</a>,
+              <a href="https://scholar.google.com/citations?user=Sk7-TuUAAAAJ&hl=en&oi=ao" target="_blank">Reiner Birkl</a>,
+              <a href="https://scholar.google.com/citations?user=Xdy_LywAAAAJ&hl=en&oi=ao" target="_blank">Michael Paulitsch</a>,
               <a href="https://matthias.pw/" target="_blank">Matthias Müller</a>,
-              <a href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a>,
+              <a href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a>
               <br>
               <em>European Conference on Computer Vision (<strong>ECCV</strong>)</em>, 2024
               <br>
@@ -95,19 +95,44 @@
 
       <tr onmouseout="font_stop()" onmouseover="font_start()">
         <td style="padding:2.5%;width:25%;vertical-align:middle">
+                    <a href="Images/pami24.png"><img style="width:100%;max-width:100%" alt="pre19" src="Images/pami24.png" class="hoverZoomLink"></a>
+                  </td>
+                  <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a>
+                      <papertitle>SSR-2D: Semantic 3D Scene Reconstruction from 2D Images</papertitle>
+                    </a>
+                    <br>
+              <a href="https://scholar.google.com/citations?user=EqmkdrAAAAAJ" target="_blank">Junwen Huang</a>,
+              <a href="https://artonson.github.io/" target="_blank">Alexey Artemov</a>,
+              <strong>Yujin Chen</strong>,
+              <a href="" target="_blank"> Shuaifeng Zhi</a>,
+              <a href="" target="_blank">Kai Xu</a>,
+              <a href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">MMatthias Nießner</a>
+              <br>
+              <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>)</em>, 2024
+              <br>
+              <p>
+              <a href="https://ieeexplore.ieee.org/document/10549849" target="_blank">Paper<a> &nbsp/&nbsp
+              <a href="https://arxiv.org/pdf/2302.03640.pdf" target="_blank">Pdf<a> 
+              </p>
+        </td>
+      </tr>
+
+      <tr onmouseout="font_stop()" onmouseover="font_start()">
+        <td style="padding:2.5%;width:25%;vertical-align:middle">
                     <a href="Images/PHRIT_0.png"><img style="width:100%;max-width:100%" alt="pre19" src="Images/PHRIT_0.png" class="hoverZoomLink"></a>
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
                     <a>
-                      <papertitle>PHRIT: Parametric Hand Representation with Implicit Template.</papertitle>
+                      <papertitle>PHRIT: Parametric Hand Representation with Implicit Template</papertitle>
                     </a>
                     <br>
               <a href="" target="_blank">Zhisheng Huang*</a>,
               <strong>Yujin Chen*</strong>,
               <a href="" target="_blank">Di Kang</a>,
               <a href="https://jinluzhang.site/" target="_blank">Jinlu Zhang</a>,
-              <a href="" target="_blank">Zhigang Tu</a> 
-              <br>(* equal contribution)<br>
+              <a href="" target="_blank">Zhigang Tu</a>  
+              <br>(* equal contribution)
               <br>
               <em>International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2023
               <br>
@@ -124,7 +149,7 @@
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
                     <a>
-                      <papertitle>Consistent 3D Hand Reconstruction in Video via Self-supervised Learning.</papertitle>
+                      <papertitle>Consistent 3D Hand Reconstruction in Video via Self-supervised Learning</papertitle>
                     </a>
                     <br>
               <a href="" target="_blank">Zhigang Tu</a>,
@@ -134,7 +159,7 @@
               <a href="http://linchaobao.github.io/" target="_blank">Linchao Bao</a>,
               <a href="http://www.lmars.whu.edu.cn/enbisheng-yang/" target="_blank">Bisheng Yang</a>, 
               <a href="https://cse.buffalo.edu/~jsyuan/" target="_blank">Junsong Yuan</a>
-              <br>(† senior authorship)<br>
+              <br>(† senior authorship)
               <br>
               <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>)</em>, 2023
               <br>
@@ -152,7 +177,7 @@
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
                     <a>
-                      <papertitle>4DContrast: Contrastive Learning with Dynamic Correspondences for 3D Scene Understanding.</papertitle>
+                      <papertitle>4DContrast: Contrastive Learning with Dynamic Correspondences for 3D Scene Understanding</papertitle>
                     </a>
                     <br>
               <strong>Yujin Chen</strong>,
@@ -175,7 +200,7 @@
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
                     <a>
-                      <papertitle>MixSTE: Seq2seq Mixed Spatio-Temporal Encoder for 3D Human Pose Estimation in Video.</papertitle>
+                      <papertitle>MixSTE: Seq2seq Mixed Spatio-Temporal Encoder for 3D Human Pose Estimation in Video</papertitle>
                     </a>
                     <br>
               <a href="https://jinluzhang.site/" target="_blank">Jinlu Zhang</a>,
@@ -201,7 +226,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
-                <papertitle>Model-based 3D Hand Reconstruction via Self-Supervised Learning.</papertitle>
+                <papertitle>Model-based 3D Hand Reconstruction via Self-Supervised Learning</papertitle>
               </a>
               <br>
 			  <strong>Yujin Chen</strong>,
@@ -231,7 +256,7 @@
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
                 <a>
-                  <papertitle>I2UV-HandNet: Image-to-UV Prediction Network for Accurate and High-fidelity 3D Hand Mesh Modeling.</papertitle>
+                  <papertitle>I2UV-HandNet: Image-to-UV Prediction Network for Accurate and High-fidelity 3D Hand Mesh Modeling</papertitle>
                 </a>
                 <br>
           <a href="" target="_blank">Ping Chen</a>,
@@ -258,7 +283,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
-                <papertitle>Joint Hand-Object 3D Reconstruction from a Single Image with Cross-branch Feature Fusion.</papertitle>
+                <papertitle>Joint Hand-Object 3D Reconstruction from a Single Image with Cross-branch Feature Fusion</papertitle>
               </a>
               <br>
 			  <strong>Yujin Chen</strong>,
@@ -287,7 +312,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
-                <papertitle>SO-HandNet: Self-Organizing Network for 3D Hand Pose Estimation with Semi-supervised Learning.</papertitle>
+                <papertitle>SO-HandNet: Self-Organizing Network for 3D Hand Pose Estimation with Semi-supervised Learning</papertitle>
               </a>
               <br>
               <strong>Yujin Chen</strong>,
@@ -330,7 +355,7 @@
           </tr>
         </tbody></table>
     
-    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+    <table width="110%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
               <heading>Services</heading>
