--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <strong>Yujin Chen</strong>,
               <a href="" target="_blank"> Shuaifeng Zhi</a>,
               <a href="" target="_blank">Kai Xu</a>,
-              <a href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">MMatthias Nießner</a>
+              <a href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a>
               <br>
               <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>)</em>, 2024
               <br>
