--- a/projects/Mesh2NeRF/index.html
+++ b/projects/Mesh2NeRF/index.html
@@ -88,7 +88,7 @@
 
                   <!-- Video Link. -->
                   <span class="link-block">
-                    <a href="https://youtu.be/oufv1N3f7iY" target="_blank"
+                    <a href="https://youtu.be/SsFkhSuQYGM" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                             <svg class="svg-inline--fa fa-youtube fa-w-18" aria-hidden="true"
@@ -180,7 +180,7 @@
           
           <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/oufv1N3f7iY?si=m-E0iCwMj_Dqp45q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SsFkhSuQYGM?si=OuajejdpCf1OUegT" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -214,12 +214,19 @@
           <div class="item item-video1">
             <video poster="" id="video1" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="./static/videos/entree_du_chateau_des_bois_francs.mp4"
+              <source src="./static/videos/country_kitchen.mp4"
               type="video/mp4">
             </video>
           </div>
           <div class="item item-video2">
             <video poster="" id="video2" autoplay controls muted loop height="100%">
+              <!-- Your video file here -->
+              <source src="./static/videos/entree_du_chateau_des_bois_francs.mp4"
+              type="video/mp4">
+            </video>
+          </div>
+          <div class="item item-video3">
+            <video poster="" id="video3" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
               <source src="./static/videos/chateau_des_bois_francs.mp4"
               type="video/mp4">
