--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Before that, I received my B.Eng and M.Sc from Wuhan University.
         </p>
 			  <p style="text-align:justify">
-        My current research interests lie in 3D reconstruction, 3D generation, scene understanding, neural rendering, motion analysis, and representation learning.
+        My current research interests lie in 3D reconstruction, 3D generation, scene understanding, neural rendering, and representation learning.
         </p>
         
   
@@ -67,7 +67,7 @@
       
       <tr onmouseout="font_stop()" onmouseover="font_start()">
         <td style="padding:2.5%;width:25%;vertical-align:middle">
-                    <a href="Images/Mesh2NeRF.png"><img style="width:100%;max-width:100%" alt="pre19" src="Images/Mesh2NeRF.png" class="hoverZoomLink"></a>
+                    <a href="Images/mesh2nerf_thumbnail.jpg"><img style="width:90%;max-width:90%" alt="pre19" src="Images/mesh2nerf_thumbnail.jpg" class="hoverZoomLink"></a>
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
                     <a>
@@ -87,7 +87,7 @@
               <p>
               <a href="https://arxiv.org/abs/2403.19319" target="_blank">Paper<a> &nbsp/&nbsp
               <a href="" target="_blank">Code<a> &nbsp/&nbsp
-              <a href="https://youtu.be/oufv1N3f7iY" target="_blank">Video<a> &nbsp/&nbsp
+              <a href="https://youtu.be/SsFkhSuQYGM" target="_blank">Video<a> &nbsp/&nbsp
               <a href="https://terencecyj.github.io/projects/Mesh2NeRF/" target="_blank">Project Page<a>
               </p>
         </td>
