--- a/projects/PBR-SR/index.html
+++ b/projects/PBR-SR/index.html
@@ -76,7 +76,7 @@
 
                   <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2403.19319" target="_blank"
+                  <a href="" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
