--- a/projects/PBR-SR/index.html
+++ b/projects/PBR-SR/index.html
@@ -76,7 +76,7 @@
 
                   <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="" target="_blank"
+                  <a href="https://arxiv.org/abs/2506.02846" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -252,7 +252,7 @@
         @article{chen2025pbrsr,
           title={PBR-SR: Mesh PBR Texture Super Resolution from 2D Image Priors},
           author={Chen, Yujin and Nie, Yinyu and Ummenhofer, Benjamin and Birkl, Reiner and Paulitsch, Michael and Nie{\ss}ner, Matthias},
-          journal={arXiv preprint arXiv},
+          journal={arXiv preprint arXiv:2506.02846},
           year={2025}
         }</code></pre>
     </div>
