--- a/projects/PBR-SR/index.html
+++ b/projects/PBR-SR/index.html
@@ -68,7 +68,7 @@
               </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>Technical University of Munich &nbsp <sup>2</sup>Intel Labs<br>Preprint</span>
+                    <span class="author-block"><sup>1</sup>Technical University of Munich &nbsp <sup>2</sup>Intel Labs<br>NeurIPS 2025</span>
                   </div>
 
                   <div class="column has-text-centered">
