--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <strong>Key Interests:</strong> Spatial AI, 3D Reconstruction, 3D Generation, Motion Analysis, Scene Understanding, and Representation Learning.
           </blockquote>
 
-          <blockquote class="job-seeking">
+          <!-- <blockquote class="job-seeking">
             <p>I am seeking full-time positions in industry or academia, beginning Summer 2026.</p>
           </blockquote>
 
           <p>
             I'm open to research collaboration. Please email me if you are interested to explore more on spatial AI together!
-          </p>
+          </p> -->
 
           
 
