--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="#publications">Publications</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#services">Services</a></li>
+        <li><a href="#misc">Misc</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -79,7 +80,7 @@
             <a href="https://scholar.google.com/citations?user=Jc3b5ukAAAAJ&hl=en" target="_blank" class="link-button">Google Scholar</a>
             <a href="https://github.com/TerenceCYJ" target="_blank" class="link-button">Github</a>
             <a href="http://www.linkedin.com/in/yujin-chen-278706106/" target="_blank" class="link-button">LinkedIn</a>
-            <a href="CV_Yujin_Chen.pdf" target="_blank" class="link-button">CV</a>
+            <a href="Yujin_Chen_Resume.pdf" target="_blank" class="link-button">CV</a>
             <a href="https://twitter.com/YujinChen_cv" target="_blank" class="link-button">Twitter/X</a>
           </div>
         </div>
@@ -296,7 +297,7 @@
       <h2>Experience</h2>
       <div class="experience-list">
         <p>
-        <strong>Research Scientist Intern, Meta Reality Labs</strong>, Jul. 2025 ~ present
+        <strong>Research Scientist Intern, Meta Reality Labs</strong>, Jul. 2025 ~ Nov. 2025
         </p>
         <p>
         <strong>Postgraduate Researcher, TU Munich</strong>, Advisors: Prof. <a href="http://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a>, Jul. 2021 ~ present
@@ -308,7 +309,7 @@
         <strong>Visiting Researcher, State University of New York at Buffalo</strong>, Advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/" target="_blank">Junsong Yuan</a>, Jul. 2019 ~ Nov. 2019
         </p>
         <p>
-        <strong>Research Assistant, Wuhan University</strong>, Advisor: Prof. <a href="http://castf.org/pages/chenruizhi/chenruizhi-intro.html" target="_blank">Ruizhi Chen</a> and Prof. <a href="http://tuzhigang.cn/English.html" target="_blank">Zhigang Tu</a>, Sep. 2018 ~ Jun. 2021
+        <strong>Research Assistant, Wuhan University</strong>, Advisor: Prof. <a href="http://castf.org/pages/chenruizhi/chenruizhi-intro.html" target="_blank">Ruizhi Chen</a> and Prof. <a href="http://tuzhigang.cn/English.html" target="_blank">Zhigang Tu</a>, Jan. 2017 ~ Jun. 2021
         </p>
       </div>
     </section>
@@ -333,6 +334,19 @@
             <li><a href="https://niessner.github.io/ADL4CV/" target="_blank">Advanced Deep Learning for Computer Vision: Visual Computing (IN2390)</a>, Teaching Assistant, Winter 2021</li>
           </ul>
         </div>
+      </div>
+    </section>
+
+
+    <section id="misc">
+      <h2>Misc</h2>
+      <div class="misc-container">
+        <p style="color: #666; line-height: 1.6;">
+          Beyond academia, I enjoy exploring the world and capturing moments. 
+          Feel free to chat with me about sports 🧗 (I'm into bouldering and tennis), travel ✈️ ,
+          photography 📸 (<a href="https://flic.kr/s/aHBqjCDzbL" target="_blank">my Flickr album</a>), 
+          or any other interesting topics.
+        </p>
       </div>
     </section>
 
